Assets and Navbar

--- a/menuPage.html
+++ b/menuPage.html
@@ -7,3 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <nav class="navbar">
+        <ul class="navlinks">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menuPage.html" class="active">Menu</a></li>
+            <li><a href="orderPage.html">Order</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
