--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <li><a href="orderPage.html">Order</a></li>
         </ul>
     </nav>
+    <h1 class="indexh1">Korean Food Stall #01-23</h1>
 </body>
 </html>
