First hawker stall HomePage

--- a/index.html
+++ b/index.html
@@ -15,5 +15,26 @@
         </ul>
     </nav>
     <h1 class="indexh1">Korean Food Stall #01-23</h1>
+    <img src="KoreanStall.png" alt="Korean Food Stall" class="indeximg1">
+    <h2 class="indexh2">Healthier Choices</h2>
+    <div>
+        <ul class="FoodOptions1">
+            <li>
+                <img src="Kfood1.png">
+                <p>Dish $10</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+            <li>
+                <img src="Kfood2.png">
+                <p>Dish $12</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+            <li>
+                <img src="Kfood3.png">
+                <p>Dish $8</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
