--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <h1 class="indexh1">Korean Food Stall #01-23</h1>
-    <img src="KoreanStall.png" alt="Korean Food Stall" class="indeximg1">
+    <img src="KoreanStall.png" alt="Korean Food Stall" class="indeximg">
     <h2 class="indexh2">Healthier Choices</h2>
     <div>
         <ul class="FoodOptions1">
@@ -31,6 +31,28 @@
             </li>
             <li>
                 <img src="Kfood3.png">
+                <p>Dish $8</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+        </ul>
+    </div>
+    <h1 class="indexh1">Yong Tau Foo #01-23</h1>
+    <img src="YongTauFooStall.png" alt="Yong Tau Foo Stall" class="indeximg">
+    <h2 class="indexh2">Healthier Choices</h2>
+    <div>
+        <ul class="FoodOptions2">
+            <li>
+                <img src="Yfood1.png">
+                <p>Dish $10</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+            <li>
+                <img src="Yfood2.png">
+                <p>Dish $12</p>
+                <a href="menuPage.html" class="orderlink">Order Now</a>
+            </li>
+            <li>
+                <img src="Yfood3.png">
                 <p>Dish $8</p>
                 <a href="menuPage.html" class="orderlink">Order Now</a>
             </li>
