--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <img src="KoreanStall.png" alt="Korean Food Stall" class="indeximg">
     <h2 class="indexh2">Healthier Choices</h2>
     <div>
-        <ul class="FoodOptions1">
+        <ul class="FoodOptions">
             <li>
                 <img src="Kfood1.png">
                 <p>Dish $10</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
             <li>
                 <img src="Kfood2.png">
                 <p>Dish $12</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
             <li>
                 <img src="Kfood3.png">
                 <p>Dish $8</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
         </ul>
     </div>
@@ -40,21 +40,21 @@
     <img src="YongTauFooStall.png" alt="Yong Tau Foo Stall" class="indeximg">
     <h2 class="indexh2">Healthier Choices</h2>
     <div>
-        <ul class="FoodOptions2">
+        <ul class="FoodOptions">
             <li>
                 <img src="Yfood1.png">
                 <p>Dish $10</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
             <li>
                 <img src="Yfood2.png">
                 <p>Dish $12</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
             <li>
                 <img src="Yfood3.png">
                 <p>Dish $8</p>
-                <a href="menuPage.html" class="orderlink">Order Now</a>
+                <a href="menuPage.html" class="orderlink">View</a>
             </li>
         </ul>
     </div>
