--- a/menuPage.html
+++ b/menuPage.html
@@ -5,14 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="menu.js" defer></script>
 </head>
 <body>
-        <nav class="navbar">
+    <nav class="navbar">
         <ul class="navlinks">
             <li><a href="index.html">Home</a></li>
             <li><a href="menuPage.html" class="active">Menu</a></li>
             <li><a href="orderPage.html">Order</a></li>
         </ul>
     </nav>
+    <h1 class="indexh1">Korean Food Stall #01-23</h1>
+    <div>
+        <ul class="FoodOptions">
+            <li>
+                <img src="Kfood1.png">
+                <p>Dish $10</p>
+                <button id="orderK1">Order</button>
+            </li>
+            <li>
+                <img src="Kfood2.png">
+                <p>Dish $12</p>
+                <button id="orderK2">Order</button>
+            </li>
+            <li>
+                <img src="Kfood3.png">
+                <p>Dish $8</p>
+                <button id="orderK3">Order</button>
+            </li>
+        </ul>
+    </div>
+    <h1 class="indexh1">Yong Tau Foo #01-23</h1>
+    <div>
+        <ul class="FoodOptions">
+            <li>
+                <img src="Yfood1.png">
+                <p>Dish $10</p>
+                <button id="orderY1">Order</button>
+            </li>
+            <li>
+                <img src="Yfood2.png">
+                <p>Dish $12</p>
+                <button id="orderY2">Order</button>
+            </li>
+            <li>
+                <img src="Yfood3.png">
+                <p>Dish $8</p>
+                <button id="orderY3">Order</button>
+            </li>
+        </ul>
+    </div>
+
 </body>
 </html>
